# pyalda

./: CHANGELOG.md  CMakeLists.txt  CODE_REVIEW.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build.yml  build2.yml
src/: CMakeLists.txt
src/aldakit/: __init__.py  _alda_parser.cpp  api.py  cli.py  repl.py  score.py
src/aldakit/compose/: core.py
src/aldakit/midi/: generator.py  midi_to_ast.py  smf.py  soundfont.py  transcriber.py
src/aldakit/midi/backends/: libremidi_backend.py  tsf_backend.py
tests/: test_api.py  test_cli.py  test_compose.py  test_midi.py  test_midi_import.py  test_midi_transcribe.py  test_tsf_backend.py
