[project]
name = "aldakit"
version = "0.1.4"
description = "Python parser and MIDI generator for the Alda music programming language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "Shakeeb Alireza", email = "me@example.com" }
]
keywords = ["alda", "midi", "music", "parser", "composition", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/shakfu/aldakit"
Repository = "https://github.com/shakfu/aldakit"
Documentation = "https://github.com/shakfu/aldakit#readme"
Changelog = "https://github.com/shakfu/aldakit/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "twine>=6.2.0",
    "ty>=0.0.8",
]

[project.scripts]
aldakit = "aldakit.cli:main"

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
# wheel.py-api = "cp312"

# Files to exclude from the SDist even if they are included by default. Supports gitignore syntax.
sdist.exclude = []

# A set of patterns to exclude from the wheel.
wheel.exclude = [
    "include/**",
    "lib/**",
    "aldakit/_libremidi.cpp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
exclude = ["src/aldakit/ext"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ty.src]
exclude = [
    "src/aldakit/ext",
    "src/aldakit/repl.py",
    "src/aldakit/midi/backends/libremidi_backend.py",
]

[tool.cibuildwheel]
# Build for Python 3.10-3.13
build = "cp310-* cp311-* cp312-* cp313-*"
# Skip 32-bit builds and musllinux (no ALSA headers)
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
# Simple test to verify import works
test-command = "python -c \"from aldakit import parse; print(parse('piano: c d e'))\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# Install ALSA development headers for libremidi
before-all = "yum install -y alsa-lib-devel || apt-get update && apt-get install -y libasound2-dev || true"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
